[package]
name = "mooshroom-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_text_mesh = "0.9.0"
log = "0.4.17"
mooshroom = { path = "../mooshroom"}
